SWC-4443: rework column schema editor UI

--- a/src/main/webapp/sass/Portal10.scss
+++ b/src/main/webapp/sass/Portal10.scss
@@ -1049,10 +1049,6 @@ i.font-size-12x {
 	font-size:12em;
 }
 
-.vertical-align-bottom {
-	vertical-align: bottom;
-}
-
 h1, h2, h3, h4, h5, h6 {
 	word-wrap: break-word;
 }
@@ -1727,13 +1723,19 @@ ol.lowerroman {
 	margin-top: 10px !important;
 }
 
-.vertical-align-middle {
-	vertical-align: middle;
+#body {
+	.vertical-align-middle {
+		vertical-align: middle;
+	}
+	
+	.vertical-align-top {
+		vertical-align: top;
+	}
+	.vertical-align-bottom {
+		vertical-align: bottom;
+	}
 }
 
-.vertical-align-top {
-	vertical-align: top;
-}
 
 .top-right {
 	position: absolute;
