add style margin-left-auto to effectively pull the last element of the flex row to the right

--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -606,10 +606,12 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 .margin-5 {
 	margin: 5px;
 }
-
 .margin-top-left-10 {
 	margin-top: 10px;
 	margin-left: 10px;
+}
+.margin-left-auto {
+	margin-left: auto;
 }
 .margin-left-1 {
 	margin-left: 1px;
