--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -128,6 +128,9 @@ end sticky footer
 	.tooltip-inner {
 		max-width: inherit;
 	}
+	.tooltip {
+		max-width: 300px;
+	}
 	.form-control-readonly {
 		cursor: text;
 	}
