SWC-4501: add margin-left to give space to show ol li number, room for up to 3 digits (999 items)

--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -868,6 +868,7 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 		padding-left: 15px;
 		li {
 			padding-top: 5px;
+			margin-left: 10px;
 		}
 	}
 	ul { 
@@ -875,6 +876,7 @@ div.favoriteIcon i, button.favoriteIcon>i, i.favoriteIcon, a.favoriteIcon, a.fav
 		padding-left: 17px;
 		li {
 			padding-top: 5px;
+			margin-left: 10px;
 		}
 	}
 
