--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -32,21 +32,29 @@ a {color:$synapse-blue;text-decoration:none;}
 a:visited{color:$synapse-blue; text-decoration:none;}
 a:hover{color:$synapse-blue; text-decoration:underline;}
 a:focus{color:$synapse-blue; text-decoration:underline;}
-.synapse-yellow, #body .synapse-yellow {color:$synapse-yellow;}
-.synapse-blue, #body .synapse-blue {color:$synapse-blue;}
-.synapse-purple, #body .synapse-purple {color:$synapse-purple;}
-.synapse-green, #body .synapse-green {color:$synapse-green;}
+#body {
+	.synapse-yellow {color:$synapse-yellow;}
+	.synapse-blue {color:$synapse-blue;}
+	.synapse-purple {color:$synapse-purple;}
+	.synapse-green {color:$synapse-green;}
+	
+	.synapse-yellow-bg {background-color:$synapse-yellow;}
+	.synapse-blue-bg {background-color:$synapse-blue;}
+	.synapse-purple-bg {background-color:$synapse-purple;}
+	.synapse-green-bg {background-color:$synapse-green;}
+	.synapse-orange-bg {background-color:$synapse-orange;}
+	.synapse-accent-primary-bg {background-color:$synapse-accent-primary;}
 
-.synapse-yellow-bg, #body .synapse-yellow-bg {background-color:$synapse-yellow;}
-.synapse-blue-bg, #body .synapse-blue-bg {background-color:$synapse-blue;}
-.synapse-purple-bg, #body .synapse-purple-bg {background-color:$synapse-purple;}
-.synapse-green-bg, #body .synapse-green-bg {background-color:$synapse-green;}
-.synapse-orange-bg, #body .synapse-orange-bg {background-color:$synapse-orange;}
-.synapse-accent-primary-bg, #body .synapse-accent-primary-bg {background-color:$synapse-accent-primary;}
-
-.synapse-blue-bg-gradient, #body .synapse-blue-bg-gradient {
-	background: linear-gradient(180deg, $synapse-blue 0%, $synapse-blue-end-gradient 100%);
+	.synapse-yellow-border {border-color:$synapse-yellow;}
+	.synapse-blue-border {border-color:$synapse-blue;}
+	.synapse-purple-border {border-color:$synapse-purple;}
+	.synapse-green-border {border-color:$synapse-green;}
+	
+	.synapse-blue-bg-gradient {
+		background: linear-gradient(180deg, $synapse-blue 0%, $synapse-blue-end-gradient 100%);
+	}
 }
+
 .pagination>li>a, .pagination>li>span {
 	color: $synapse-blue;
 }
@@ -2225,6 +2233,10 @@ td.datePickerMonth {
   border-top: 1px solid #dddddd;
 }
 
+.border-top-2 {
+  border-top: 2px solid;
+}
+
 .read-only-box {
 	padding: 5px;
     border: 1px solid #dddddd;
@@ -2739,8 +2751,6 @@ div.border {
 
 #rootPanel .fullWidthAlert {
 	@include border-radius(0px);
-	margin-left: -15px;
-	margin-right: -15px;
 	box-shadow: none;
 	padding: 7px 15px;
 }
