--- a/src/main/webapp/sass/swc.scss
+++ b/src/main/webapp/sass/swc.scss
@@ -2755,7 +2755,7 @@ div.border {
 	font-style:italic;
 }
 
-#rootPanel .fullWidthAlert {
+#body .fullWidthAlert {
 	@include border-radius(0px);
 	box-shadow: none;
 	padding: 7px 15px;
