SWC-4532: report the total number of members (do not attempt to figure out count based on filter)

--- a/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/TeamViewImpl.ui.xml
@@ -65,7 +65,7 @@
 		    		<bh:Div addStyleNames="margin-bottom-5 padding-10 light-border">
 		    			<bh:Div addStyleNames="highlight-title">
 			    			<bh:Text>Members (</bh:Text>
-			    			<bh:Text ui:field="totalMemberCountField" />
+			    			<bh:Div ui:field="memberCountContainer" addStyleNames="inline-block"/>
 			    			<bh:Text>)</bh:Text>
 			    		</bh:Div>
 			    		<g:SimplePanel ui:field="memberListPanel"/>
