--- a/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/view/ProfileViewImpl.ui.xml
@@ -1,7 +1,7 @@
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder" xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:s="urn:import:org.sagebionetworks.web.client.view"
     xmlns:b="urn:import:org.gwtbootstrap3.client.ui" xmlns:bh="urn:import:org.gwtbootstrap3.client.ui.html" xmlns:t="urn:import:org.sagebionetworks.web.client.view.bootstrap.table"
-    xmlns:v="urn:import:org.sagebionetworks.web.client.widget.verification" xmlns:w="urn:import:org.sagebionetworks.web.client.widget">
+    xmlns:v="urn:import:org.sagebionetworks.web.client.widget.verification" xmlns:w="urn:import:org.sagebionetworks.web.client.widget" xmlns:tr="urn:import:org.sagebionetworks.web.client.widget.table.v2.results">
 
     <ui:with field='sageImageBundle' type='org.sagebionetworks.web.client.SageImageBundle' />
 
@@ -205,11 +205,14 @@
                                                         </b:DropDownMenu>
                                                     </b:ButtonGroup>
                                                 </b:ButtonGroup>
-                                    			<b:ButtonGroup pull="RIGHT">
-	                                                <b:Button ui:field="projectSortButton" dataToggle="DROPDOWN" size="EXTRA_SMALL" height="26px"></b:Button>
-	                                                <b:DropDownMenu ui:field="sortProjectsDropDownMenu"></b:DropDownMenu>
-	                                            </b:ButtonGroup>
                                     		</bh:Div>
+                                    		<t:Table ui:field="columnHeaders" width="100%" addStyleNames="margin-top-10"> <!-- Project list table headers -->
+												<t:TableRow>
+													<tr:SortableTableHeaderImpl ui:field="projectNameColumnHeader" text="Name" />
+													<tr:SortableTableHeaderImpl width="140px" ui:field="lastActivityOnColumnHeader" text="Last Activity On" addStyleNames="hidden-xs" />
+												</t:TableRow>
+											</t:Table>
+											<bh:Hr addStyleNames="margin-top-5 margin-bottom-5" />
                                     		<g:FlowPanel ui:field="projectsTabContent" addStyleNames="margin-top-10" />
                                     	</bh:Div>
                                         <g:FlowPanel ui:field="favoritesHelpPanel" addStyleNames="help-panel" visible="false">
