--- a/src/main/webapp/icons/font/synapseicons.css
+++ b/src/main/webapp/icons/font/synapseicons.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'synapseicons';
-  src: url('../font/synapseicons.eot?2774205');
-  src: url('../font/synapseicons.eot?2774205#iefix') format('embedded-opentype'),
-       url('../font/synapseicons.woff2?2774205') format('woff2'),
-       url('../font/synapseicons.woff?2774205') format('woff'),
-       url('../font/synapseicons.ttf?2774205') format('truetype'),
-       url('../font/synapseicons.svg?2774205#synapseicons') format('svg');
+  src: url('../font/synapseicons.eot?71780786');
+  src: url('../font/synapseicons.eot?71780786#iefix') format('embedded-opentype'),
+       url('../font/synapseicons.woff2?71780786') format('woff2'),
+       url('../font/synapseicons.woff?71780786') format('woff'),
+       url('../font/synapseicons.ttf?71780786') format('truetype'),
+       url('../font/synapseicons.svg?71780786#synapseicons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'synapseicons';
-    src: url('../font/synapseicons.svg?2774205#synapseicons') format('svg');
+    src: url('../font/synapseicons.svg?71780786#synapseicons') format('svg');
   }
 }
 */
@@ -79,5 +79,7 @@
 .syn-trash-o:before { content: '\e815'; } /* '' */
 .syn-warning:before { content: '\e816'; } /* '' */
 .syn-check:before { content: '\e817'; } /* '' */
+.syn-users:before { content: '\e81b'; } /* '' */
+.syn-user:before { content: '\e81c'; } /* '' */
 .syn-sort-asc:before { content: '\e831'; } /* '' */
 .syn-sort-desc:before { content: '\e832'; } /* '' */
