SWC-4585: improve errors in column models wizard

--- a/src/main/resources/org/sagebionetworks/web/client/widget/table/modal/wizard/ModalWizardViewImpl.ui.xml
+++ b/src/main/resources/org/sagebionetworks/web/client/widget/table/modal/wizard/ModalWizardViewImpl.ui.xml
@@ -19,7 +19,7 @@
 			<bh:Text ui:field="instructions"></bh:Text>
 			<g:SimplePanel ui:field="bodyPanel"/>
 			<bh:Div styleName="margin-top-15" />
-			<b:Alert ui:field="alert" type="DANGER" visible="false"></b:Alert>
+			<bh:Div ui:field="synapseAlertContainer"/>
 		</b:ModalBody>
 		<b:ModalFooter>
 			<b:Button ui:field="defaultButton" type="LINK" text="Cancel"	></b:Button>
